Moved the html files to the BeginnerHTML and changed the reference in index page.

--- a/BeginnerHTML/exercise_2.html
+++ b/BeginnerHTML/exercise_2.html
@@ -9,5 +9,6 @@
     <p>This is the first paragraph.</p>
     <p>This one is the second one.</p>
     <p>And here goes the third one</p>
+    <a href="/index.html">Home</a>
 </body>
 </html>
