--- a/index.html
+++ b/index.html
@@ -9,26 +9,26 @@
     <p>Kutman Mukarapov</p>
     <h1>Navigation links for exercises:</h1>
     <ol>
-        <li><a href="exercise_1.html">Exercise 1</a></li>
-        <li><a href="exercise_2.html">Exercise 2</a></li>
-        <li><a href="exercise_3.html">Exercise 3</a></li>
-        <li><a href="exercise_4.html">Exercise 4</a></li>
-        <li><a href="exercise_5.html">Exercise 5</a></li>
-        <li><a href="exercise_6.html">Exercise 6</a></li>
-        <li><a href="exercise_7.html">Exercise 7</a></li>
-        <li><a href="exercise_8.html">Exercise 8</a></li>
-        <li><a href="exercise_9.html">Exercise 9</a></li>
-        <li><a href="exercise_10.html">Exercise 10</a></li>
-        <li><a href="exercise_11.html">Exercise 11</a></li>
-        <li><a href="exercise_12.html">Exercise 12</a></li>
-        <li><a href="exercise_13.html">Exercise 13</a></li>
-        <li><a href="exercise_14.html">Exercise 14</a></li>
-        <li><a href="exercise_15.html">Exercise 15</a></li>
-        <li><a href="exercise_16.html">Exercise 16</a></li>
-        <li><a href="exercise_17.html">Exercise 17</a></li>
-        <li><a href="exercise_18.html">Exercise 18</a></li>
-        <li><a href="exercise_19.html">Exercise 19</a></li>
-        <li><a href="exercise_20.html">Exercise 20</a></li>
+        <li><a href="BeginnerHTML/exercise_1.html">Exercise 1</a></li>
+        <li><a href="BeginnerHTML/exercise_2.html">Exercise 2</a></li>
+        <li><a href="BeginnerHTML/exercise_3.html">Exercise 3</a></li>
+        <li><a href="BeginnerHTML/exercise_4.html">Exercise 4</a></li>
+        <li><a href="BeginnerHTML/exercise_5.html">Exercise 5</a></li>
+        <li><a href="BeginnerHTML/exercise_6.html">Exercise 6</a></li>
+        <li><a href="BeginnerHTML/exercise_7.html">Exercise 7</a></li>
+        <li><a href="BeginnerHTML/exercise_8.html">Exercise 8</a></li>
+        <li><a href="BeginnerHTML/exercise_9.html">Exercise 9</a></li>
+        <li><a href="BeginnerHTML/exercise_10.html">Exercise 10</a></li>
+        <li><a href="BeginnerHTML/exercise_11.html">Exercise 11</a></li>
+        <li><a href="BeginnerHTML/exercise_12.html">Exercise 12</a></li>
+        <li><a href="BeginnerHTML/exercise_13.html">Exercise 13</a></li>
+        <li><a href="BeginnerHTML/exercise_14.html">Exercise 14</a></li>
+        <li><a href="BeginnerHTML/exercise_15.html">Exercise 15</a></li>
+        <li><a href="BeginnerHTML/exercise_16.html">Exercise 16</a></li>
+        <li><a href="BeginnerHTML/exercise_17.html">Exercise 17</a></li>
+        <li><a href="BeginnerHTML/exercise_18.html">Exercise 18</a></li>
+        <li><a href="BeginnerHTML/exercise_19.html">Exercise 19</a></li>
+        <li><a href="BeginnerHTML/exercise_20.html">Exercise 20</a></li>
     </ol>
 
 
