--- a/BeginnerHTML/exercise_20.html
+++ b/BeginnerHTML/exercise_20.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <video width="320" height="240" controls>
-    <source src="imeges/istockphoto-584057340-640_adpp_is.mp4" type="video/mp4">
+    <source src="../imeges/istockphoto-584057340-640_adpp_is.mp4" type="video/mp4">
 </video>
 </body>
 </html>
