--- a/BeginnerHTML/exercise_3.html
+++ b/BeginnerHTML/exercise_3.html
@@ -7,5 +7,6 @@
 </head>
 <body>
 <img src="/imeges/wp2601082-kali-linux-wallpaper-1920x1080.jpg" alt="An image of a kali Linux wallpaper">
+<a href="/index.html">Home</a>
 </body>
 </html>
