--- a/BeginnerHTML/exercise_1.html
+++ b/BeginnerHTML/exercise_1.html
@@ -1,12 +1,14 @@
 <!doctype html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>My First Webpage</title>
 </head>
 <body>
+
     <h1>Hello, World</h1>
-    <a href="/index.html">Home</a>
+    <a href="../index.html">Home</a>
 </body>
 </html>
