--- a/BeginnerHTML/exercise_2.html
+++ b/BeginnerHTML/exercise_2.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Document</title>
+
 </head>
 <body>
     <p>This is the first paragraph.</p>
     <p>This one is the second one.</p>
     <p>And here goes the third one</p>
-    <a href="/index.html">Home</a>
+    <a href="../index.html">Home</a>
 </body>
 </html>
