--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <p>Kutman Mukarapov</p>
     <h1>Navigation links for exercises:</h1>
+    <h2>BEGINNER HTML EXERCISES</h2>
     <ol>
         <li><a href="BeginnerHTML/exercise_1.html">Exercise 1</a></li>
         <li><a href="BeginnerHTML/exercise_2.html">Exercise 2</a></li>
@@ -29,6 +30,78 @@
         <li><a href="BeginnerHTML/exercise_18.html">Exercise 18</a></li>
         <li><a href="BeginnerHTML/exercise_19.html">Exercise 19</a></li>
         <li><a href="BeginnerHTML/exercise_20.html">Exercise 20</a></li>
+    </ol>
+
+    <h2>INTERMEDIATE HTML EXERCISES</h2>
+    <ol>
+        <li><a href="IntermediateHTML/task_1/home.html">Exercise 1</a></li>
+        <li><a href="IntermediateHTML/exercise_2.html">Exercise 2</a></li>
+        <li><a href="IntermediateHTML/exercise_3.html">Exercise 3</a></li>
+        <li><a href="IntermediateHTML/exercise_4.html">Exercise 4</a></li>
+        <li><a href="IntermediateHTML/exercise_5.html">Exercise 5</a></li>
+        <li><a href="IntermediateHTML/exercise_6.html">Exercise 6</a></li>
+        <li><a href="IntermediateHTML/exercise_7.html">Exercise 7</a></li>
+        <li><a href="IntermediateHTML/exercise_8.html">Exercise 8</a></li>
+        <li><a href="IntermediateHTML/exercise_9.html">Exercise 9</a></li>
+        <li><a href="IntermediateHTML/exercise_10.html">Exercise 10</a></li>
+        <li><a href="IntermediateHTML/exercise_11.html">Exercise 11</a></li>
+        <li><a href="IntermediateHTML/exercise_12.html">Exercise 12</a></li>
+        <li><a href="IntermediateHTML/exercise_13.html">Exercise 13</a></li>
+        <li><a href="IntermediateHTML/exercise_14.html">Exercise 14</a></li>
+        <li><a href="IntermediateHTML/exercise_15.html">Exercise 15</a></li>
+        <li><a href="IntermediateHTML/exercise_16.html">Exercise 16</a></li>
+        <li><a href="IntermediateHTML/exercise_17.html">Exercise 17</a></li>
+        <li><a href="IntermediateHTML/exercise_18.html">Exercise 18</a></li>
+        <li><a href="IntermediateHTML/exercise_19.html">Exercise 19</a></li>
+        <li><a href="IntermediateHTML/exercise_20.html">Exercise 20</a></li>
+    </ol>
+
+    <h2>BEGINNER CSS EXERCISES</h2>
+    <ol>
+        <li><a href="BeginnerCSS/exercise_1.html">Exercise 1</a></li>
+        <li><a href="BeginnerCSS/exercise_2.html">Exercise 2</a></li>
+        <li><a href="BeginnerCSS/exercise_3.html">Exercise 3</a></li>
+        <li><a href="BeginnerCSS/exercise_4.html">Exercise 4</a></li>
+        <li><a href="BeginnerCSS/exercise_5.html">Exercise 5</a></li>
+        <li><a href="BeginnerCSS/exercise_6.html">Exercise 6</a></li>
+        <li><a href="BeginnerCSS/exercise_7.html">Exercise 7</a></li>
+        <li><a href="BeginnerCSS/exercise_8.html">Exercise 8</a></li>
+        <li><a href="BeginnerCSS/exercise_9.html">Exercise 9</a></li>
+        <li><a href="BeginnerCSS/exercise_10.html">Exercise 10</a></li>
+        <li><a href="BeginnerCSS/exercise_11.html">Exercise 11</a></li>
+        <li><a href="BeginnerCSS/exercise_12.html">Exercise 12</a></li>
+        <li><a href="BeginnerCSS/exercise_13.html">Exercise 13</a></li>
+        <li><a href="BeginnerCSS/exercise_14.html">Exercise 14</a></li>
+        <li><a href="BeginnerCSS/exercise_15.html">Exercise 15</a></li>
+        <li><a href="BeginnerCSS/exercise_16.html">Exercise 16</a></li>
+        <li><a href="BeginnerCSS/exercise_17.html">Exercise 17</a></li>
+        <li><a href="BeginnerCSS/exercise_18.html">Exercise 18</a></li>
+        <li><a href="BeginnerCSS/exercise_19.html">Exercise 19</a></li>
+        <li><a href="BeginnerCSS/exercise_20.html">Exercise 20</a></li>
+    </ol>
+
+    <h2>INTERMEDIATE CSS EXERCISES</h2>
+    <ol>
+        <li><a href="IntermediateCSS/exercise_1.html">Exercise 1</a></li>
+        <li><a href="IntermediateCSS/exercise_2.html">Exercise 2</a></li>
+        <li><a href="IntermediateCSS/exercise_3.html">Exercise 3</a></li>
+        <li><a href="IntermediateCSS/exercise_4.html">Exercise 4</a></li>
+        <li><a href="IntermediateCSS/exercise_5.html">Exercise 5</a></li>
+        <li><a href="IntermediateCSS/exercise_6.html">Exercise 6</a></li>
+        <li><a href="IntermediateCSS/exercise_7.html">Exercise 7</a></li>
+        <li><a href="IntermediateCSS/exercise_8.html">Exercise 8</a></li>
+        <li><a href="IntermediateCSS/exercise_9.html">Exercise 9</a></li>
+        <li><a href="IntermediateCSS/exercise_10.html">Exercise 10</a></li>
+        <li><a href="IntermediateCSS/exercise_11.html">Exercise 11</a></li>
+        <li><a href="IntermediateCSS/exercise_12.html">Exercise 12</a></li>
+        <li><a href="IntermediateCSS/exercise_13.html">Exercise 13</a></li>
+        <li><a href="IntermediateCSS/exercise_14.html">Exercise 14</a></li>
+        <li><a href="IntermediateCSS/exercise_15.html">Exercise 15</a></li>
+        <li><a href="IntermediateCSS/exercise_16.html">Exercise 16</a></li>
+        <li><a href="IntermediateCSS/exercise_17.html">Exercise 17</a></li>
+        <li><a href="IntermediateCSS/exercise_18.html">Exercise 18</a></li>
+        <li><a href="IntermediateCSS/exercise_19.html">Exercise 19</a></li>
+        <li><a href="IntermediateCSS/exercise_20.html">Exercise 20</a></li>
     </ol>
 
 
