added home link in the beginner html tasks

--- a/BeginnerHTML/exercise_17.html
+++ b/BeginnerHTML/exercise_17.html
@@ -8,5 +8,6 @@
   <p>This should be in one side of the hr</p>
   <hr>
   <p>And this is the other side of the horizontal line</p>
+  <a href="../index.html">Home</a>
 </body>
 </html>
