--- a/BeginnerHTML/exercise_18.html
+++ b/BeginnerHTML/exercise_18.html
@@ -6,5 +6,6 @@
 </head>
 <body>
   <h1>The language is set to english, please refer to the code of the page.</h1>
+  <a href="../index.html">Home</a>
 </body>
 </html>
