--- a/BeginnerHTML/exercise_19.html
+++ b/BeginnerHTML/exercise_19.html
@@ -13,5 +13,6 @@
     <dt>JavaScript</dt>
     <dd>A programming language used to make web pages interactive.</dd>
   </dl>
+  <a href="../index.html">Home</a>
 </body>
 </html>
