--- a/BeginnerHTML/exercise_6.html
+++ b/BeginnerHTML/exercise_6.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <!--This page is dedicated to complete the sixth exercise only-->
+    <a href="../index.html">Home</a>
 </body>
 </html>
