--- a/BeginnerHTML/exercise_9.html
+++ b/BeginnerHTML/exercise_9.html
@@ -14,5 +14,6 @@
         the 1960s with the release of Letraset sheets containing Lorem Ipsum passages,
         and more recently with desktop publishing software like <i><b>Aldus PageMaker including
         versions of Lorem Ipsum</b></i>.</p>
+    <a href="../index.html">Home</a>
 </body>
 </html>
