--- a/BeginnerHTML/exercise_10.html
+++ b/BeginnerHTML/exercise_10.html
@@ -10,5 +10,6 @@
       <input type="text" id = "name" name = name>
       <input  type="submit" value="Submit">
     </form>
+    <a href="../index.html">Home</a>
 </body>
 </html>
