--- a/BeginnerHTML/exercise_13.html
+++ b/BeginnerHTML/exercise_13.html
@@ -6,5 +6,6 @@
 </head>
 <body>
   <p>Lorem Ipsum is simply dummy text of the printing and typesetting <br> industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,<br> when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+  <a href="../index.html">Home</a>
 </body>
 </html>
