--- a/BeginnerHTML/exercise_16.html
+++ b/BeginnerHTML/exercise_16.html
@@ -6,5 +6,6 @@
 </head>
 <body>
   <p>Lorem Ipsum is <stron>simply dummy text of the printing </stron>and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+  <a href="../index.html">Home</a>
 </body>
 </html>
